--- a/templates/includes/_form.html
+++ b/templates/includes/_form.html
@@ -18,6 +18,7 @@
             <div class="form-group">
               <div class="col-md-9 col-md-offset-3">
                 <button type="submit" class="btn btn-success">Save</button>
+                <a href="{% url 'tasks:list' %}">Or, go back to every task.</a>
               </div>
             </div>
         </fieldset>
