--- a/templates/tasks/task_confirm_delete.html
+++ b/templates/tasks/task_confirm_delete.html
@@ -8,6 +8,7 @@
         {% csrf_token %}
             Are you sure you want to delete "{{ object }}" ?
             <button type="submit" class="btn btn-danger">Confirm</button>
+            <a href="{% url 'tasks:list' %}">Or, go back to every task.</a>
         </form>
     </div>
 {% endblock container %}
